objects/PC_CaseProduct__c.object
<CustomObject>
    <description>Holds the products associated to a specific case.</description>
    <fields>
        <fullName>PC_Case__c</fullName>
        <description>Lookup to cases</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>ProductCases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_EndDate__c</fullName>
        <description>End Date of the case-product relationship</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to products</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_StartDate__c</fullName>
        <description>Start Date of the case-product relationship</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Case Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Case Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>